# opengl

./: .gitignore  44444.cpp  CMakeLists.txt  Publishers_Comparison.md  Quick_Test_Guide.md  Strict_Receiver_Guide.md  ZeroMQ_Usage_Guide.md  build_sender.sh  build_sender_socket.sh  imgui.ini  receiver.cpp  sender  sender.cpp  sender_data_publisher.py  sensor_publisher_usage.md  环境配置文档.md
include/Core/: DataManager.h
include/IO/: SocketSubscriber.h  ZeroMQSubscriber.h
include/UI/: MainController.h
src/: main.cpp  main_commented.cpp  main_refactored.cpp  main_refactored_commented.cpp
src/Core/: DataManager.cpp  DataManager_commented.cpp
src/IO/: SocketSubscriber.cpp  ZeroMQSubscriber.cpp  ZeroMQSubscriber_commented.cpp
src/UI/: MainController.cpp  MainController_commented.cpp
